WebVR: Work around page visibility being set late on Android.

This CL introduces a hopefully short-term hacky fix to the problem of
the page visibility not being set when the page actually becomes visible
on android, leading WebVR to hit DCHECKS checking that the page is
visible.

This should be safe because we know for sure that the page is actually
visible when we allow vr presentation, because we only do so after the
activity is resumed.

Bug: 756476
Change-Id: If9a264fc33793af959ceaf23ab14cc29fcfc0404
Reviewed-on: https://chromium-review.googlesource.com/619888
Reviewed-by: Brandon Jones <bajones@chromium.org>
Commit-Queue: Michael Thiessen <mthiesse@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496830}
Former-commit-id: 9e73e0623e6b22c6266d0362e7b3bf5db9f634ef